# evmpu

./: README.md
Lab1/: lab1_Borodin_19205.docx
Lab2/: lab2_Borodin_19205.docx  main.cpp  script.sh
Lab3/: 1st listing.cpp  2nd listing -O0.txt  3rd listing -O2.txt  lab3_Borodin_19205.docx
Lab4/: 1st listing.cpp  2nd listing(-O0).txt  3rd listing(-O2).txt  about_lab4_ARM_to_students.docx  lab4_Borodin_19205.docx
Lab5/: CMakeLists.txt  lab5_Borodin_19205.docx  opencv.cpp
Lab6/: CMakeLists.txt  lab6_Borodin_19205.docx  libusb.cpp
Lab7/: CMakeLists.txt  NoSSE.cpp  OpenBLAS.cpp  SSE.cpp  lab7_Borodin_19205.docx
Lab8/: CMakeLists.txt  cache.cpp  lab8_Borodin_19205.docx
Lab9/: CMakeLists.txt  cacheAss.cpp  lab9_Borodin_19205.docx
